developerProject/force-app/main/default/objects/OJ_PM__Residual_Value_and_Balloon__c/OJ_PM__Residual_Value_and_Balloon__c.object-meta.xml
<CustomObject>
    <label>Residual Value And Balloon</label>
    <nameField>
        <label>Residual Value and Balloon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Residual Values And Balloons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>