developerProject/force-app/main/default/objects/OJ_PM__Residual_Value_and_Balloon__c/fields/OJ_PM__Introducer_Asset__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Introducer_Asset__c</fullName>
    <label>Introducer Asset</label>
    <referenceTo>OJ_PM__Introducer_Asset__c</referenceTo>
    <relationshipName>Residual_Values_and_Balloons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>