developerProject/force-app/main/default/objects/OJ_PM__Residual_Value_and_Balloon__c/fields/OJ_PM__Max_Residual_Value__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__Max_Residual_Value__c</fullName>
    <label>Max Residual Value</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>