developerProject/force-app/main/default/objects/OJ_PM__Residual_Value_and_Balloon__c/fields/OJ_PM__X100__c.field-meta.xml
<CustomField>
    <fullName>OJ_PM__X100__c</fullName>
    <defaultValue>false</defaultValue>
    <label>$100</label>
    <type>Checkbox</type>
</CustomField>